after add bg image in support section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <section class="target-section">
         <div class="inner-target">
-            <h1>Inside Auto Layout</h1>
+            <h1>My current Layout</h1>
             <p>Why is web development important
                 Web development is important for differentiating your business from competitors because it can help you stand out from the crowd. If you have a website that is well-designed, easy to navigate, and visually appealing, you will be more likely to attract customers than similar businesses that don't have these features.</p>
 
