after complite support section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <div class="support-section">
             <h1> I need Support</h1>
             <p>everyone need support.So, support us! That will help us lot</p>
-            <div>
-                <input type="text">
+            <div class="search">
+                <input type="text" placeholder="Suggest me any feedback for me ">
                 <button>Submit</button>
             </div>
         </div>
