half of working footer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                 source codes available to others beside the author through leasing.</p>
 
             <div>
-                <iframe width="100%" height="600px" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=efzG0leaDi9J5LpH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" height="600px" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=efzG0leaDi9J5LpH"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -88,29 +91,32 @@
         <div class="inner-target">
             <h1>My current Layout</h1>
             <p>Why is web development important
-                Web development is important for differentiating your business from competitors because it can help you stand out from the crowd. If you have a website that is well-designed, easy to navigate, and visually appealing, you will be more likely to attract customers than similar businesses that don't have these features.</p>
+                Web development is important for differentiating your business from competitors because it can help you
+                stand out from the crowd. If you have a website that is well-designed, easy to navigate, and visually
+                appealing, you will be more likely to attract customers than similar businesses that don't have these
+                features.</p>
 
-                <div class="target-card-parent">
-                    <div class="target-card card-color1">
-                        <img src="assets/html.png" alt="">
-                        <h1>HTML</h1>
-                        <p>HTML is a markup langulage . It is for structure. HTML : Hyper text markup language</p>
-                        <a href="">Learn more</a>
-                    </div>
-                    <div class="target-card card-color2">
-                        <img src="assets/css.png" alt="">
-                        <h1>CSS</h1>
-                        <p>Css is a  langulage for style.  CSS : Cascading Style Sheets</p>
-                        <a href="">Learn more</a>
-                    </div>
-                    <div class="target-card card-color3">
-                        <img src="assets/js.png" alt="">
-                        <h1>JS</h1>
-                        <p>JS is a programming langulage . It is for interacting with user. JS : Java Script</p>
-                        <a href="">Learn more</a>
-                    </div>
-                   
+            <div class="target-card-parent">
+                <div class="target-card card-color1">
+                    <img src="assets/html.png" alt="">
+                    <h1>HTML</h1>
+                    <p>HTML is a markup langulage . It is for structure. HTML : Hyper text markup language</p>
+                    <a href="">Learn more</a>
                 </div>
+                <div class="target-card card-color2">
+                    <img src="assets/css.png" alt="">
+                    <h1>CSS</h1>
+                    <p>Css is a langulage for style. CSS : Cascading Style Sheets</p>
+                    <a href="">Learn more</a>
+                </div>
+                <div class="target-card card-color3">
+                    <img src="assets/js.png" alt="">
+                    <h1>JS</h1>
+                    <p>JS is a programming langulage . It is for interacting with user. JS : Java Script</p>
+                    <a href="">Learn more</a>
+                </div>
+
+            </div>
         </div>
 
     </section>
@@ -125,6 +131,16 @@
             </div>
         </div>
     </section>
+
+
+    <footer class="footer">
+        <div class="footer-content">
+            <h1>An Open Commitment by Awlad Hossain </h1>
+            <div>
+
+            </div>
+        </div>
+    </footer>
 
 </body>
 
