half of design footer

--- a/index.html
+++ b/index.html
@@ -136,8 +136,16 @@
     <footer class="footer">
         <div class="footer-content">
             <h1>An Open Commitment by Awlad Hossain </h1>
-            <div>
-
+            <div class="footer-img">
+                <div>
+                    <img src="assets/facebook.png" alt="">
+                </div>
+                <div>
+                    <img src="assets/github.png" alt="">
+                </div>
+                <div>
+                    <img src="assets/linkedin-icon 1.png" alt="">
+                </div>
             </div>
         </div>
     </footer>
