--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p>Aspiring to be a developer, I'm driven by a passion for technology and learning, aiming to create
                     user-friendly, innovative applications that solve real-world problems.</p>
-                <button>Contact with me</button>
+               <a href="#footer"> <button >Contact with me</button></a>
             </div>
         </div>
     </header>
@@ -101,19 +101,19 @@
                     <img src="assets/html.png" alt="">
                     <h1>HTML</h1>
                     <p>HTML is a markup langulage . It is for structure. HTML : Hyper text markup language</p>
-                    <a href="">Learn more</a>
+                    <a href="https://html.com/">Learn more</a>
                 </div>
                 <div class="target-card card-color2">
                     <img src="assets/css.png" alt="">
                     <h1>CSS</h1>
                     <p>Css is a langulage for style. CSS : Cascading Style Sheets</p>
-                    <a href="">Learn more</a>
+                    <a href="https://www.w3schools.com/css/">Learn more</a>
                 </div>
                 <div class="target-card card-color3">
                     <img src="assets/js.png" alt="">
                     <h1>JS</h1>
                     <p>JS is a programming langulage . It is for interacting with user. JS : Java Script</p>
-                    <a href="">Learn more</a>
+                    <a href="https://www.w3schools.com/js/">Learn more</a>
                 </div>
 
             </div>
@@ -133,18 +133,20 @@
     </section>
 
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="footer-content">
             <h1>An Open Commitment by Awlad Hossain </h1>
             <div class="footer-img">
                 <div>
-                    <img src="assets/facebook.png" alt="">
+                    <a href="https://www.facebook.com/"> <img src="assets/facebook.png" alt=""></a>
                 </div>
                 <div>
-                    <img src="assets/github.png" alt="">
+                   <a href="https://github.com/"> <img src="assets/github.png" alt=""></a>
                 </div>
                 <div>
-                    <img src="assets/linkedin-icon 1.png" alt="">
+                    <a href="https://www.linkedin.com/">
+                        <img src="assets/linkedin-icon 1.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
