after adding navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <header>
+        <nav>
+            <h1>Rahat</h1>
+            <button>Download Resume </button>
+        </nav>
         <div class="header-main">
             <div class="header-item">
                 <img src="assets/Group.png" alt="">
@@ -77,8 +81,8 @@
                 licensing to protect software developers. The movement was therefore a licensing measure meant to make
                 source codes available to others beside the author through leasing.</p>
 
-            <div>
-                <iframe width="100%" height="600px" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=efzG0leaDi9J5LpH"
+            <div class="video">
+                <iframe width="100%" height="600px" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=efzG0leaDi9J5LpH" class="youtube"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -89,7 +93,7 @@
 
     <section class="target-section">
         <div class="inner-target">
-            <h1>My current Layout</h1>
+            <h1>My current Target</h1>
             <p>Why is web development important
                 Web development is important for differentiating your business from competitors because it can help you
                 stand out from the crowd. If you have a website that is well-designed, easy to navigate, and visually
@@ -106,13 +110,13 @@
                 <div class="target-card card-color2">
                     <img src="assets/css.png" alt="">
                     <h1>CSS</h1>
-                    <p>Css is a langulage for style. CSS : Cascading Style Sheets</p>
+                    <p>Css is a langulage for style. CSS : Cascading Style Sheets . it is use for style </p>
                     <a href="https://www.w3schools.com/css/">Learn more</a>
                 </div>
                 <div class="target-card card-color3">
                     <img src="assets/js.png" alt="">
                     <h1>JS</h1>
-                    <p>JS is a programming langulage . It is for interacting with user. JS : Java Script</p>
+                    <p>JS is a programming langulage . It is for interacting with user. JS : Java Script.</p>
                     <a href="https://www.w3schools.com/js/">Learn more</a>
                 </div>
 
@@ -135,7 +139,7 @@
 
     <footer class="footer" id="footer">
         <div class="footer-content">
-            <h1>An Open Commitment by Awlad Hossain </h1>
+            <h1>An Open Commitment by Al-Amin Islam Rahat </h1>
             <div class="footer-img">
                 <div>
                     <a href="https://www.facebook.com/"> <img src="assets/facebook.png" alt=""></a>
